--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "must-targaryen",
-  "version": "1.0.0",
+  "version": "3.0.0-rc.0",
   "description": "Adds Firebase Targaryen rule assertions into Must",
   "main": "index.js",
   "scripts": {
